refactor(iam): general fix to some unused imports and delete unneccesary classes